# livrariadadudaa

./: .gitignore  db.sqlite3  livraria_bkp.json  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_editora.py  0002_livro_autores.py  0002_livro_capa.py  0003_autor_livro.py
core/models/: categoria.py  livro.py
core/serializers/: __init__.py  livro.py
core/views/: __init__.py  autor.py  categoria.py  editora.py  livro.py
livraria/: settings.py  urls.py
uploader/models/: image.py
utils/: files.py
